added ResultApi
