# public/api-docs/models/openapi.yaml
@@ -28,6 +28,9 @@ tags:
     description: 'User login'
   - name: '👥 Users'
     description: 'User management'
+
+  - name: '👥 Results'
+    description: 'Result management'
 paths:
   /login_check:
     post:
@@ -214,6 +217,156 @@ paths:
             Allow:
               $ref: '#/components/headers/Allow'
 
+
+
+
+  /results:
+    get:
+      tags: [ '👥 Results' ]
+      summary: Retrieves the collection of User resources.
+      description: 'Returns all results from the system that the results has access to.'
+      operationId: api_results_cget
+      security:
+        - MiWApiSecurity: []
+      responses:
+        '200':
+          description: 'Array of results'
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  results: { description: 'Results array', type: array, items: { $ref: '#/components/schemas/Result' } }
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+    post:
+      tags: [ '👥 Results' ]
+      summary: Creates a Result resource.
+      description: 'Creates a new result'
+      operationId: api_results_post
+      security:
+        - MiWApiSecurity: []
+      requestBody:
+        $ref: '#/components/requestBodies/ResultRequestBody'
+      responses:
+        '201':
+          description: '`Created`: result created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+          headers:
+            Location:
+              $ref: '#/components/headers/Location'
+        '400':
+          $ref: '#/components/responses/400_BadRequest_Response'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '422':
+          $ref: '#/components/responses/422_UnprocessableEntity_Response'
+    options:
+      tags: [ '👥 Results']
+      summary: Provides the list of HTTP supported methods.
+      description: 'Return a `Allow` header with a comma separated list of HTTP supported methods.'
+      operationId: api_results_coptions
+      responses:
+        '204':
+          description: '`Allow` header &lt;Response body is empty&gt;'
+          headers:
+            Allow:
+              $ref: '#/components/headers/Allow'
+  '/results/{resultId}':
+    parameters:
+      - $ref: '#/components/parameters/resultId'
+    get:
+      tags: [ '👥 Results' ]
+      summary: Retrieves a Result resource based on a single ID.
+      description: 'Returns the result identified by `resultId`.'
+      operationId: api_results_get
+      security:
+        - MiWApiSecurity: [ ]
+      responses:
+        '200':
+          description: Result
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+    put:
+      tags: [ '👥 Results' ]
+      summary: Updates the Results resource.
+      description: 'Updates the results identified by `resultId`.'
+      operationId: api_results_put
+      parameters:
+        - $ref: '#/components/parameters/ifMatchParam'
+      security:
+        - MiWApiSecurity: [ ]
+      requestBody:
+        $ref: '#/components/requestBodies/ResultRequestBody'
+      responses:
+        '209':
+          description: '`Content Returned`: result previously existed and is now updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+        '400':
+          $ref: '#/components/responses/400_BadRequest_Response'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+        '412':
+          $ref: '#/components/responses/412_Precondition_Failed_Response'
+    delete:
+      tags: [ '👥 Results' ]
+      summary: Removes the User resource.
+      description: 'Deletes the result identified by `resultId`.'
+      operationId: api_results_delete
+      security:
+        - MiWApiSecurity: [ ]
+      responses:
+        '204':
+          description: 'Result deleted &lt;Response body is empty&gt;'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+    options:
+      tags: [ '👥 Results' ]
+      summary: Provides the list of HTTP supported methods.
+      description: 'Return a `Allow` header with a comma separated list of HTTP supported methods.'
+      operationId: api_results_options_id
+      responses:
+        '204':
+          description: '`Allow` header &lt;Response body is empty&gt;'
+          headers:
+            Allow:
+              $ref: '#/components/headers/Allow'
+
+
 components:
   headers:
     ETag:
@@ -262,6 +415,47 @@ components:
               href: /api/v1/users
             self:
               href: /api/v1/users/1508
+    Result:
+      type: object
+      properties:
+        id:
+          description: 'Result Id'
+          type: integer
+          format: int64
+        user_id:
+          description: 'user result'
+          type: object
+          format: int64
+        result:
+          description: 'result'
+          type: integer
+          format: int64
+        time:
+          description: 'time result'
+          type: string
+          format: date
+        _links:
+          description: link relations
+          type: object
+          properties:
+            parent:
+              type: object
+              properties: {"href": { "type": "string", "format": "url" }}
+            self:
+              type: object
+              properties: {"href": { "type": "string", "format": "url" }}
+      example:
+        result:
+          id: 20
+          user_id: 2
+          result: 2012
+          time: 2021-12-11 17:52:35
+          _links:
+            parent:
+              href: /api/v1/results
+            self:
+              href: /api/v1/results/1508
+
     Message:
       type: object
       description: HTTP response message
@@ -358,6 +552,31 @@ components:
               email: User_email@example.com
               password: User_password
               roles: [ 'ROLE_USER', 'ROLE_ADMIN' ]
+    ResultRequestBody:
+      description: '`Result` data'
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              user_id:
+                description: 'user result'
+                type: object
+                format: int64
+              result:
+                description: 'result'
+                type: integer
+                format: int64
+              time:
+                description: 'time result'
+                type: string
+                format: date
+            example:
+              user_id: 2
+              result: 2012
+              time: 2021-12-11 17:52:35
+
     LoginRequestBody:
       description: Registered user **e-mail** and **password**
       required: true
@@ -395,6 +614,21 @@ components:
       required: true
       schema: { "type": "integer", pattern: '^\d+$' }
     ifMatchParam:
+      name: If-Match
+      in: header
+      description: "ETag value of the resource you are trying to update"
+      required: true
+      schema:
+        type: string
+        pattern: "[0-9a-f]*"
+
+    resultId:
+      name: resultId
+      in: path
+      description: 'ID of result'
+      required: true
+      schema: { "type": "integer", pattern: '^\d+$' }
+    iffMatchParam:
       name: If-Match
       in: header
       description: "ETag value of the resource you are trying to update"
